POST /gfe/typing/hla/{locus} added
