# swagger_server/swagger/swagger.yaml
@@ -248,6 +248,65 @@ paths:
           description: "Failed to load the features of locus"
       x-swagger-router-controller: "swagger_server.controllers.locus_feature_controller"
 
+  /gfe/typing/hla/{locus}:
+    post:
+      tags:
+        - "gfe type Seq locus"
+      description: "Get HLA and GFE from consensus sequence or GFE notation"
+      operationId: "gfeTyping_get"
+      produces:
+        - "application/json"
+      consumes:
+        - "application/json"
+      parameters:
+        - name: "locus"
+          in: "path"
+          description: "Valid HLA locus"
+          required: true
+          type: "string"
+        - name: "imgthla_version"
+          in: "query"
+          description: "IMGT/HLA DB Version"
+          required: false
+          type: "string"
+          default: "3.31.0"
+        - name: "neo4j_url"
+          in: "query"
+          description: "URL for the neo4j graph"
+          required: false
+          type: "string"
+        - name: "user"
+          in: "query"
+          description: "Username for the neo4j graph"
+          required: false
+          type: "string"
+        - name: "password"
+          in: "query"
+          description: "Password for the neo4j graph"
+          required: false
+          type: "string"
+        - name: "sequence"
+          in: "body"
+          description: "Consensus sequence"
+          required: true
+          schema:
+            type: 'object'
+            required:
+              - 'sequence'
+            properties:
+              sequence:
+                type: 'string'
+      responses:
+        200:
+          description: "HLA and GFE from consensus sequence"
+          schema:
+            $ref: "#/definitions/Typing"
+        404:
+          description: "Failed to generate allele call"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "swagger_server.controllers.gfe_typing_controller"
+
 
 
 definitions:
